--- a/public/drawing.html
+++ b/public/drawing.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Draw and Guess</title>
+    <title>Chalkboard Room</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk"
@@ -18,84 +18,67 @@
 
     <div class="draw">
 
-        <div class="row">
+        <div class="room">
+            <div class="upper">
+                <div>
+
+                    <div id="canvas-container">
+                        <canvas id="canvas-real" class="canvas" width='706px' height='488px'></canvas>
+                        <canvas id="chalkboard" class="canvas" width='706px' height='488px'></canvas>
+                    </div>
+
+                </div>
+
+                <div>
+
+                    <div id="ranking">
+                        <img id="name" src="./images/ranking.png" width="70px" height="35px" style="margin: 5px">
+                    </div>
+
+                    <div id="chatroom">
+                        <img id="name" src="./images/chatroom.png" width="100px" height="35px" style="margin: 5px">
+                    </div>
+
+                </div>
+            </div>
+
             <div>
                 <div id="color-picker">
 
-                    <div class="container">
-                        <div class="row">
+                    <i class="fas fa-circle" id="small" style="padding: 5px; font-size: 20px; padding:15px 10px 10px 20px;"></i>
+                    <i class="fas fa-circle" id="big" style="padding: 5px; font-size: 30px; padding: 10px 10px 0px 10px;"></i>
+                    <!-- <i class="fas fa-pencil-alt" style="padding: 5px; font-size: 50px;"></i> -->
 
-                            <div class="col-xl-4 color">
-                                <i class="fas fa-pencil-alt" style="padding: 5px; font-size: 20px;"></i>
-                                <i class="fas fa-pencil-alt" style="padding: 5px; font-size: 30px;"></i>
-                                <i class="fas fa-pencil-alt" style="padding: 5px; font-size: 50px;"></i>
-                            </div>
+                    <i class="fas fa-minus" id="red" style="color: red;"></i>
+                    <i class="fas fa-minus" id="orange" style="color: orange;"></i>
+                    <i class="fas fa-minus" id="yellow" style="color: yellow;"></i>
 
-                            <div class="col-xl-4 color">
-                                <i class="fas fa-tint" id="red" style="color: red; padding: 5px;"></i>
-                                <i class="fas fa-tint" id="orange" style="color: orange; padding: 5px;"></i>
-                                <i class="fas fa-tint" id="yellow" style="color: yellow; padding: 5px;"></i>
-                            </div>
+                    <i class="fas fa-minus" id="brown" style="color: #663300;"></i>
+                    <i class="fas fa-minus" id="green" style="color: #00CC00;"></i>
+                    <!-- <i class="fas fa-minus" id="dark-green" style="color: #006600; padding: 3px;"></i> -->
 
-                            <div class="col-xl-4 color">
-                                <i class="fas fa-tint" id="brown" style="color: #663300; padding: 8px;"></i>
-                                <i class="fas fa-tint" id="green" style="color: #00CC00; padding: 8px;"></i>
-                                <i class="fas fa-tint" id="dark-green" style="color: #006600; padding: 8px;"></i>
-                            </div>
+                    <i class="fas fa-minus" id="light-blue" style="color: #73CFFA;"></i>
+                    <i class="fas fa-minus" id="blue" style="color: #0366CC;"></i>
+                    <!-- <i class="fas fa-minus" id="light-purple" style="color: #CC00CC; padding: 3px;"></i> -->
 
-                            <div class="col-xl-4 color">
-                                <i class="fas fa-tint" id="light-blue" style="color: #73CFFA; padding: 8px;"></i>
-                                <i class="fas fa-tint" id="blue" style="color: #0366CC; padding: 8px;"></i>
-                                <i class="fas fa-tint" id="light-purple" style="color: #CC00CC; padding: 8px;"></i>
-                            </div>
+                    <i class="fas fa-minus" id="light-red" style="color: #FF6666;"></i>
+                    <i class="fas fa-minus" id="purple" style="color: purple;"></i>
+                    <i class="fas fa-minus" id="lighter-purple" style="color: #FF40FF;"></i>
 
-                            <div class="col-xl-4 color">
-                                <i class="fas fa-tint" id="light-red" style="color: #FF6666; padding: 8px;"></i>
-                                <i class="fas fa-tint" id="purple" style="color: purple; padding: 8px;"></i>
-                                <i class="fas fa-tint" id="lighter-purple" style="color: #FF40FF; padding: 8px;"></i>
-                            </div>
+                    <i class="fas fa-minus" id="black" style="color: black;"></i>
+                    <i class="fas fa-minus" id="white" style="color: white;"></i>
+                    <i class="fas fa-minus" id="grey" style="color: #919499;"></i>
 
-                            <div class="col-xl-4 color">
-                                <i class="fas fa-tint" id="black" style="color: black; padding: 8px;"></i>
-                                <i class="fas fa-tint" id="white" style="color: white; padding: 8px;"></i>
-                                <i class="fas fa-tint" id="grey" style="color: #919499; padding: 8px;"></i>
-                            </div>
+                    <!-- <i class="fas fa-undo" style="padding: 8px; font-size: 30px;"></i> -->
+                    <i id="duster" style="padding-left: 20px;">
+                        <img src="./images/duster.png" height="35" width="80">
+                    </i>
+                    <!-- <i class="fas fa-trash-alt" style="padding: 8px; font-size: 30px;"></i> -->
 
-                            <div class="col-xl-4 color">
-                                <i class="fas fa-undo" style="padding: 8px; font-size: 30px;"></i>
-                                <i class="fas fa-eraser" style="padding: 8px; font-size: 30px;"></i>
-                                <i class="fas fa-trash-alt" style="padding: 8px; font-size: 30px;"></i>
-                            </div>
+                    <!-- <i class="fas fa-square-full" style="padding: 8px; font-size: 30px;"></i> -->
 
-                            <div class="col-xl-4 color">
-                                <i class="fas fa-square-full" style="padding: 8px; font-size: 30px;"></i>
-                            </div>
 
-                        </div>
-                    </div>
                 </div>
-            </div>
-
-
-            <div>
-
-                <div id="canvas-container">
-                    <canvas id="canvas-real" class="canvas" width='700px' height='488px'></canvas>
-                    <canvas id="canvas-draft" class="canvas" width='700px' height='488px'></canvas>
-                </div>
-
-            </div>
-
-            <div>
-
-                <div id="ranking">
-                    <p>ranking</p>
-                </div>
-
-                <div id="chatroom">
-                    <p>chatroom</p>
-                </div>
-
             </div>
         </div>
 
@@ -103,13 +86,12 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script type='text/javascript' src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
     <script type='text/javascript' src="./js/canvas-common.js"></script>
-    <script type='text/javascript' src="./tools/red.js"></script>
+    <!-- <script type='text/javascript' src="./tools/red.js"></script>
     <script type='text/javascript' src="./tools/orange.js"></script>
     <script type='text/javascript' src="./tools/yellow.js"></script>
     <script type='text/javascript' src="./tools/brown.js"></script>
@@ -123,55 +105,58 @@
     <script type='text/javascript' src="./tools/lighter-purple.js"></script>
     <script type='text/javascript' src="./tools/black.js"></script>
     <script type='text/javascript' src="./tools/white.js"></script>
-    <script type='text/javascript' src="./tools/grey.js"></script>
+    <script type='text/javascript' src="./tools/grey.js"></script> -->
     <script type='text/javascript'>
-        $('#red').click(() => {
-            currentFunction = new Red(contextReal, contextDraft);
-        });
-        $('#orange').click(() => {
-            currentFunction = new Orange(contextReal, contextDraft);
-        });
-        $('#yellow').click(() => {
-            currentFunction = new Yellow(contextReal, contextDraft);
-        });
-        $('#brown').click(() => {
-            currentFunction = new Brown(contextReal, contextDraft);
-        });
-        $('#green').click(() => {
-            currentFunction = new Green(contextReal, contextDraft);
-        });
-        $('#dark-green').click(() => {
-            currentFunction = new DarkGreen(contextReal, contextDraft);
-        });
-        $('#light-blue').click(() => {
-            currentFunction = new LightBlue(contextReal, contextDraft);
-        });
-        $('#blue').click(() => {
-            currentFunction = new Blue(contextReal, contextDraft);
-        });
-        $('#light-purple').click(() => {
-            currentFunction = new LightPurple(contextReal, contextDraft);
-        });
-        $('#light-red').click(() => {
-            currentFunction = new LightRed(contextReal, contextDraft);
-        });
-        $('#purple').click(() => {
-            currentFunction = new Purple(contextReal, contextDraft);
-        });
-        $('#lighter-purple').click(() => {
-            currentFunction = new LighterPurple(contextReal, contextDraft);
-        });
-        $('#black').click(() => {
-            currentFunction = new Black(contextReal, contextDraft);
-        });
-        $('#white').click(() => {
-            currentFunction = new White(contextReal, contextDraft);
-        });
-        $('#grey').click(() => {
-            currentFunction = new Grey(contextReal, contextDraft);
-        });
+        // $("#red").click(function () {
+        //     rgbaColor = 'rgba(255,0,0,1)';
+        // })
+        // $('#red').click(() => {
+        //     currentFunction = new Red(contextReal, contextDraft);
+        // });
+        // $('#orange').click(() => {
+        //     currentFunction = new Orange(contextReal, contextDraft);
+        // });
+        // $('#yellow').click(() => {
+        //     currentFunction = new Yellow(contextReal, contextDraft);
+        // });
+        // $('#brown').click(() => {
+        //     currentFunction = new Brown(contextReal, contextDraft);
+        // });
+        // $('#green').click(() => {
+        //     currentFunction = new Green(contextReal, contextDraft);
+        // });
+        // $('#dark-green').click(() => {
+        //     currentFunction = new DarkGreen(contextReal, contextDraft);
+        // });
+        // $('#light-blue').click(() => {
+        //     currentFunction = new LightBlue(contextReal, contextDraft);
+        // });
+        // $('#blue').click(() => {
+        //     currentFunction = new Blue(contextReal, contextDraft);
+        // });
+        // $('#light-purple').click(() => {
+        //     currentFunction = new LightPurple(contextReal, contextDraft);
+        // });
+        // $('#light-red').click(() => {
+        //     currentFunction = new LightRed(contextReal, contextDraft);
+        // });
+        // $('#purple').click(() => {
+        //     currentFunction = new Purple(contextReal, contextDraft);
+        // });
+        // $('#lighter-purple').click(() => {
+        //     currentFunction = new LighterPurple(contextReal, contextDraft);
+        // });
+        // $('#black').click(() => {
+        //     currentFunction = new Black(contextReal, contextDraft);
+        // });
+        // $('#white').click(() => {
+        //     currentFunction = new White(contextReal, contextDraft);
+        // });
+        // $('#grey').click(() => {
+        //     currentFunction = new Grey(contextReal, contextDraft);
+        // });
 
-        currentFunction = new DrawingLine(contextReal, contextDraft);
+        // currentFunction = new Black(contextReal, contextDraft);
     </script>
 
 </body>
