--- a/public/lobby.html
+++ b/public/lobby.html
@@ -18,9 +18,9 @@
 
                 <div class="info">
                     <h4>Student Identify Card</h4>
-                    <p class="username">username:</p>
+                    <p class="username">Username:</p>
                     <p class="game">Number of game played:</p>
-                    <p class="score">total score:</p>
+                    <p class="score">Total score:</p>
                 </div>
 
                 <img src="./images/guest1.png" width="100" height="125">
@@ -30,7 +30,7 @@
 
             <div class="col-7 booking" style="width: 600px; height: 200px">
                 <h3>Room Booking Form</h3>
-                <form id="create" method="POST" action="./drawing.html">
+                <form id="create" method="POST" action="../drawing.html">
                     Name of Room:
                     <input id="roomName" type="text" style="margin-bottom: 10px">
                     <br> Private?
@@ -44,8 +44,21 @@
         </div>
 
         <div class="row">
-            <div class="col-12 rooms">
-                <p>LOBBY</p>
+            <div class="col-12 lower">
+                <div class="row room">
+                    <!-- <div class='row singleRoom'>
+                        <div class='col-xl-6 col-sm-12'>
+                            <form action='./drawing.html'>
+                                <input id='door' type='image' src='./images/door.jpg'>
+                                <p id="roomID"></p>
+                            </form>
+                        </div>
+                        <div class='col-xl-6 col-sm-12'>
+                            <p id='p1name'></p>
+                            <p id='p2name'></p>
+                        </div>
+                    </div> -->
+                </div>
             </div>
         </div>
     </div>
@@ -59,6 +72,11 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
+    <script type='text/javascript' src="../../pictionary-nodejs-harrixon_branch/routes/socketRouter.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js">
+
+
+    </script>
     <script type="text/javascript">
         function readURL(input) {
             if (input.files && input.files[0]) {
@@ -84,7 +102,53 @@
             }
         });
 
+        // $("#createRoom").on("click", function () {
+        //     $("#door").text("Room 1");
+        // });
+
+        // $("#createRoom").click(function () {
+        //     $(".singleRoom").toggle();
+        // });
+
+        // $(document).ready(function(){
+        //     $("#createRoom").click(function(){
+        //         $(".singleRoom").append("<div class='row singleRoom' style='display: none'><div class='col-xl-6 col-sm-12'><img id='door' src='./images/door.jpg' width='100' height='200'></div><div class='col-xl-6 col-sm-12'><p id='p1name'>Player 1</p><p id='p2name'>Player 2</p></div></div>"); 
+        //     });
+        // });
+
+        $(document).ready(function () {
+            $("#createRoom").click(function () {
+                $(".room")
+                    .append("<div class='row singleRoom'><div class='col-xl-6 col-sm-12'><form action='./drawing.html'><input id='door' type='image' src='./images/door.jpg'><p id='roomID'></p></form></div><div class='col-xl-6 col-sm-12'><p id='p1name'></p><p id='p2name'></p></div></div>");
+            });
+        });
+
+        $(() => {
+            let socket = io();
+
+            socket.emit("update game list");
+
+            setInterval(() => {
+                socket.emit("update game list");
+            }, 60000);
+            // update/min
+
+            socket.on("new game list", data => {
+                // update DOM with data
+                let list = data.map((e) => {
+                    return JSON.parse(e);
+                });
+
+                list.forEach(e => {
+                    document.getElementById("roomID").innerHTML = e.roomID;
+                    document.getElementById("p1name").innerHTML = e.playerOne;
+                    document.getElementById("p2name").innerHTML = e.playerTwo;             
+                });
+            });
+        })
+
     </script>
+
 </body>
 
 <!-- let gameObject = {
@@ -94,6 +158,15 @@
     private:    settings.private,
     password:   settings.password,
     full:       (this.playerTwo ? true : false)
+}; -->
+
+<!-- let gameObject = {
+    roomID: "someIDA", //this.redisFx.randomGenID("roomID"),
+    playerOne: activePlayer.nanoID,
+    playerTwo: null,
+    private: settings.private,
+    password: settings.password,
+    full: (this.playerTwo ? true : false)
 }; -->
 
 </html>
